[project]
name = "kanban-drag-drop-persistence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "reflex>=0.9.5.post2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
